# cpp-2022-lecture-notes

./: .clang-format  .gitignore  README.md
demo/mac/task1/: CMakeLists.txt
docs/: Gemfile  (+7 more)
source/: CMakeLists.txt  new_task.sh
source/common/: utils.h
source/demo_fileio/demo1/asset/: input_data.txt
source/demo_fileio/demo1/source/: main.cpp
source/demo_fileio/demo2/source/: main.cpp
source/exam1/task1/source/: main.cpp
source/exam1/task2/source/: main.cpp
source/week1/task1/source/: main.cpp
source/week1/task2/source/: main.cpp
source/week10/task1/source/: main.cpp
source/week10/task2/include/: fraction.hpp
source/week10/task2/source/: fraction.cpp  main.cpp
source/week10/task3/include/: triangle.hpp
source/week10/task4/include/: my_time.hpp
source/week10/task4/source/: main.cpp
source/week11/task1/include/: triangle.hpp
source/week11/task1/source/: main.cpp  triangle.cpp
source/week11/task2/source/: main.cpp
source/week11/task3/source/: main.cpp
source/week11/task4/source/: main.cpp
source/week11/task5/include/: student.hpp
source/week11/task5/source/: main.cpp  student.cpp
source/week11/task6/include/: mat.hpp
source/week11/task6/source/: main.cpp
source/week12/task1/include/: student.hpp
source/week12/task1/source/: main.cpp  student.cpp
source/week12/task2/: readme.md
source/week12/task2/source/: main.cpp
source/week13/task1/source/: main.cpp
source/week13/task2/source/: main.cpp
source/week13/task3/source/: main.cpp
source/week14/task1/source/: main.cpp
source/week14/task2/source/: main.cpp
source/week15/task1/source/: main.cpp
source/week15/task2/source/: main.cpp
source/week15/task3/source/: main.cpp
source/week16/task1/source/: main.cpp
source/week16/task2/source/: main.cpp
source/week16/task3/source/: main.cpp
source/week16/task4/source/: main.cpp
source/week16/task5/source/: main.cpp
source/week16/task6/source/: main.cpp
source/week16/task7/source/: main.cpp
source/week4/task1/source/: main.cpp
source/week4/task11/source/: main.cpp
source/week4/task2/source/: main.cpp
source/week4/task3/source/: main.cpp
source/week4/task4/source/: main.cpp
source/week5/task1/source/: main.cpp
source/week5/task2/asset/: data.txt
source/week5/task2/source/: main.cpp
source/week5/task3/source/: main.cpp
source/week5/task4/asset/: data.txt
source/week5/task4/source/: main.cpp
source/week5/task5/source/: main.cpp
source/week6/task1/source/: main.cpp
(+52 files in other folders)
